--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.17.4",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.5",
