--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-social-login": "^3.4.14",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
     "typescript": "^4.3.5",
@@ -43,7 +44,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "set HTTPS=true && craco start",
     "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
