--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-snap": "^1.23.0",
     "react-social-login": "^3.4.14",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
@@ -47,7 +48,8 @@
     "start": "set HTTPS=true && craco start",
     "build": "craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
